--- a/geel-cloud-server/pom.xml
+++ b/geel-cloud-server/pom.xml
@@ -2,17 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>geek-cloud-application</artifactId>
+        <groupId>com.geek.cloud</groupId>
+        <version>1</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.geek.cloud</groupId>
-    <artifactId>geek-cloud-application</artifactId>
-    <packaging>pom</packaging>
-    <version>1</version>
-    <modules>
-        <module>geek-cloud-core</module>
-        <module>geel-cloud-server</module>
-        <module>geek-cloud-application</module>
-    </modules>
+    <artifactId>geel-cloud-server</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
