--- a/geek-cloud-application/pom.xml
+++ b/geek-cloud-application/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>geek-cloud-application</artifactId>
-        <groupId>com.geek.cloud</groupId>
+        <artifactId>com.geek.cloud</artifactId>
+        <groupId>geek-cloud-application</groupId>
         <version>1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -28,7 +28,9 @@
             <artifactId>javafx-fxml</artifactId>
             <version>19-ea+4</version>
         </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.openjfx/javafx -->
+
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx</artifactId>
@@ -36,6 +38,11 @@
             <type>pom</type>
         </dependency>
 
+        <dependency>
+            <groupId>geek-cloud-application</groupId>
+            <artifactId>geek-cloud-core</artifactId>
+            <version>1</version>
+        </dependency>
     </dependencies>
 
 </project>
