--- a/geek-cloud-server/pom.xml
+++ b/geek-cloud-server/pom.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -12,7 +11,16 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>geek-cloud-core</artifactId>
+    <artifactId>geek-cloud-server</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>geek-cloud-application</groupId>
+            <artifactId>geek-cloud-core</artifactId>
+            <version>1</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
