--- a/geek-cloud-core/pom.xml
+++ b/geek-cloud-core/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>com.geek.cloud</artifactId>
         <groupId>geek-cloud-application</groupId>
-        <version>1</version>
+        <version>1.SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
