--- a/geek-cloud-server/pom.xml
+++ b/geek-cloud-server/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>com.geek.cloud</artifactId>
         <groupId>geek-cloud-application</groupId>
-        <version>1</version>
+        <version>1.SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -17,7 +17,29 @@
         <dependency>
             <groupId>geek-cloud-application</groupId>
             <artifactId>geek-cloud-core</artifactId>
-            <version>1</version>
+            <version>1.SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>geek-cloud-application</groupId>
+            <artifactId>geek-cloud-app</artifactId>
+            <version>1.SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>geek-cloud-application</groupId>
+            <artifactId>com.geek.cloud</artifactId>
+            <version>1.SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>geek-cloud-application</groupId>
+            <artifactId>geek-cloud-server</artifactId>
+            <version>1.SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
